# PassAgent

./: .env.example  .gitignore  .gitmodules  API.md  ESORICS.md  LICENSE  README.md  TODO.md  docker-compose.yml  requirements.txt  timeline.md  搜  架构  汇报PPT内容
backend/: .env  .env.example  config.py  main.py  passagent.db  pyproject.toml  run.py
backend/agent/: graph.py  planner.py  response.py  state.py
backend/agent/memory/: __init__.py  embedding.py  reader.py  retrieve_tool.py  writer.py
backend/agent/tools/: definitions.py
backend/agent/tools/leak/: hibp_password_tool.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/mcp/: client.py  server.py  tools.py
backend/app/models/: api_models.py  database_models.py
backend/app/services/: ai_service.py  password_service.py
backend/app/tools/: leak_checker.py  og_sp_password_checker.py  password_char_checker.py  password_extract.py  password_length_check.py  security_advice.py
backend/database/: __init__.py  connection.py  database.py  init_db.py  models.py
backend/mcp/: __init__.py  server.py  tools.py
backend/routers/: auth.py  chat.py  export.py  feedback.py  memory.py  session.py  upload.py  user.py
backend/schemas/: __init__.py  auth.py  chat.py  common.py  export.py  file.py  memory.py  session.py  user.py
backend/services/: auth_service.py  conversation_service.py  email_service.py  file_service.py  session_service.py
backend/tools/: classify_intent.py  password_extract.py  security_advice.py
backend/utils/: deps.py  security.py
backend/worker/: queue.py  runner.py
(+88 files in other folders)
