[project]
name = "passagent-backend"
version = "0.1.0"
description = "PassAgent backend service"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic[email]",
    "pillow",
    "zxcvbn",
    "httpx",
    "langgraph>=1.0.8",
    "bcrypt",
    "PyJWT",
    "python-dotenv",
    "openai",
    "python-multipart",
]
