[project]
name = "passagent-backend"
version = "0.1.0"
description = "PassAgent backend service"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic[email]",
    "pillow",
    "zxcvbn",
    "httpx",
    "langgraph>=1.0.8",
    "bcrypt",
    "PyJWT",
    "python-dotenv",
    "openai",
    "python-multipart",
]
